# sel2ics

./: .gitignore  README.md  background.js  build.sh  content.js  manifest.json  popup.html  privacy.txt  replace_env.py  test.ics
assets/: icon.psd
chrome_ext/: background.js  manifest.json
sel2ics/: Cargo.toml  integration_test.sh
sel2ics/src/: main.rs
