[package]
name = "sel2ics"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
hyper = { version = "1.2", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.5"
http-body-util = "0.1.2"
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4"
chrono-tz = "0.10.1"
uuid = { version = "1.13.1", features = ["v4"] }
